--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
     background-color: #f3f3f3;
     min-height: 100%;
+    width: 100%;
 }
 
 #footer {
@@ -68,6 +69,7 @@ nav {
 
 nav h1 {
     margin: auto;
+    padding: 25px;
 }
 
 nav h1 a {
@@ -132,6 +134,7 @@ nav h1 a {
     font-weight: normal;
     line-height: 1;
     margin: 0 20px;
+    padding-top: 5px;
 }
 
 .filter-options select {
@@ -153,6 +156,9 @@ nav h1 a {
     margin: 0;
     padding: 30px 15px 60px;
     text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #restaurants-list li {
@@ -215,10 +221,11 @@ nav h1 a {
 .inside #map-container {
     background: blue none repeat scroll 0 0;
     height: 87%;
-    position: fixed;
-    right: 0;
+    position: relative;
+    z-index: 1;
+    /*right: 0;*/
     top: 80px;
-    width: 50%;
+    width: 100%;
 }
 
 .inside #map {
@@ -246,6 +253,8 @@ nav h1 a {
 
 #restaurant-img {
     width: 90%;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
 }
 
 #restaurant-address {
@@ -271,6 +280,9 @@ nav h1 a {
     border-top: 1px solid #fff;
     padding: 140px 40px 30px;
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #reviews-container {
@@ -288,6 +300,9 @@ nav h1 a {
 #reviews-list {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #reviews-list li {
@@ -300,6 +315,8 @@ nav h1 a {
     padding: 0 20px 20px;
     position: relative;
     width: 85%;
+    border-top-left-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 
 #reviews-list li p {
@@ -308,4 +325,73 @@ nav h1 a {
 
 #restaurant-hours td {
     color: #666;
+}
+
+#reviews-list li p:first-of-type {
+    font-size: 14pt;
+    font-weight: bold;
+    text-indent: 20px;
+}
+
+#reviews-list li p:first-of-type, #reviews-list li p:nth-of-type(2) {
+    color: #fff;
+    background-color: #333;
+    display: inline-flex;
+    padding: 20px 0 20px 0;
+    width: 50%;
+}
+
+#reviews-list li p:nth-of-type(2) {
+    flex-flow: row-reverse;
+    text-indent: -100px;
+    font-size: 14pt;
+    color: #a1a1a4;
+}
+
+#reviews-list li p:nth-of-type(3) {
+    color: #fff;
+    background-color: orange;
+    border-radius: 5px;
+    width: 80px;
+    padding: 10px;
+    margin: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+}
+
+#reviews-list li p:last-of-type {
+    margin: 20px;
+    text-align: justify;
+    font-size: 14pt;
+}
+
+/* ====================== Media Queries ====================== */
+@media screen and (max-width: 415px) {
+
+    nav h1 a {
+        font-size: 11pt;
+        letter-spacing: 5px;
+    }
+
+    #restaurant-name {
+        font-size: 14pt;
+    }
+
+    #restaurant-img {
+        border-top-left-radius: 25px;
+        border-bottom-right-radius: 25px;
+    }
+
+    #restaurant-address {
+        font-size: 11pt;
+    }
+
+    #restaurant-hours td {
+        font-size: 8pt;
+    }
+
+    #reviews-container h2 {
+        font-size: 20pt;
+    }
 }
