--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body, td, th, p {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 10pt;
+    font-size: 14px;
     color: #333;
     line-height: 1.5;
 }
@@ -16,7 +16,7 @@ body {
 
 ul, li {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 10pt;
+    font-size: 1.0em;
     color: #333;
 }
 
@@ -52,7 +52,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
     background-color: #444;
     color: #aaa;
-    font-size: 8pt;
+    font-size: 0.8em;
     letter-spacing: 1px;
     padding: 25px;
     text-align: center;
@@ -61,6 +61,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 /* ====================== Navigation ====================== */
 nav {
+    display: flex;
     width: 100%;
     height: 80px;
     background-color: #252831;
@@ -74,7 +75,7 @@ nav h1 {
 
 nav h1 a {
     color: #fff;
-    font-size: 14pt;
+    font-size: calc(0.45em + 2vmin);
     font-weight: 200;
     letter-spacing: 10px;
     text-transform: uppercase;
@@ -92,6 +93,7 @@ nav h1 a {
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
+    font-size: 0.9em;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -122,10 +124,15 @@ nav h1 a {
 
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+    padding: 10px 0 3px;
+    text-align: center;
     width: 100%;
-    height: 50px;
+    height: auto;
     background-color: #3397DB;
     align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .filter-options h2 {
@@ -141,7 +148,7 @@ nav h1 a {
     background-color: white;
     border: 1px solid #fff;
     font-family: Arial, sans-serif;
-    font-size: 11pt;
+    font-size: 1.1em;
     height: 35px;
     letter-spacing: 0;
     margin: 10px;
@@ -159,17 +166,20 @@ nav h1 a {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 #restaurants-list li {
+    display: flex;
+    flex-direction: column;
     background-color: #fff;
     border: 2px solid #ccc;
     font-family: Arial, sans-serif;
     margin: 15px;
     min-height: 380px;
-    padding: 0 30px 25px;
+    padding: 0 0 2px;
     text-align: left;
-    width: 270px;
+    width: 85%;
 }
 
 #restaurants-list .restaurant-img {
@@ -177,24 +187,28 @@ nav h1 a {
     display: block;
     margin: 0;
     max-width: 100%;
-    min-height: 248px;
+    min-height: auto;
     min-width: 100%;
 }
 
 #restaurants-list li h1 {
     color: #f18200;
     font-family: Arial, sans-serif;
-    font-size: 14pt;
+    font-size: 1.4em;
     font-weight: 200;
     letter-spacing: 0;
     line-height: 1.3;
     margin: 20px 0 10px;
     text-transform: uppercase;
+    padding: 0 20px;
+    height: 25px;
 }
 
 #restaurants-list p {
     margin: 0;
-    font-size: 11pt;
+    font-size: 1.1em;
+    width: 50%;
+    padding: 0 20px;
 }
 
 #restaurants-list li a {
@@ -202,7 +216,7 @@ nav h1 a {
     border-bottom: 3px solid #eee;
     color: #fff;
     display: inline-block;
-    font-size: 10pt;
+    font-size: 1.0em;
     margin: 15px 0 0;
     padding: 8px 30px 10px;
     text-align: center;
@@ -211,6 +225,13 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+.inside {
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    width: 100%;
+}
+
 .inside header {
     position: fixed;
     top: 0;
@@ -220,10 +241,9 @@ nav h1 a {
 
 .inside #map-container {
     background: blue none repeat scroll 0 0;
-    height: 87%;
+    height: 100%;
     position: relative;
     z-index: 1;
-    /*right: 0;*/
     top: 80px;
     width: 100%;
 }
@@ -237,13 +257,13 @@ nav h1 a {
 .inside #footer {
     bottom: 0;
     position: absolute;
-    width: 50%;
+    width: 100%;
 }
 
 #restaurant-name {
-    color: #f18200;
+    color: #f58500;
     font-family: Arial, sans-serif;
-    font-size: 20pt;
+    font-size: 2.0em;
     font-weight: 200;
     letter-spacing: 0;
     margin: 15px 0 30px;
@@ -252,27 +272,26 @@ nav h1 a {
 }
 
 #restaurant-img {
-    width: 90%;
-    border-top-left-radius: 50px;
-    border-bottom-right-radius: 50px;
+    width: 100%;
+    border-radius: 10px 10px 0 0;
 }
 
 #restaurant-address {
-    font-size: 12pt;
+    font-size: 1.2em;
     margin: 10px 0px;
 }
 
 #restaurant-cuisine {
     background-color: #333;
     color: #ddd;
-    font-size: 12pt;
+    font-size: 1.2em;
     font-weight: 300;
     letter-spacing: 10px;
     margin: 0 0 20px;
     padding: 2px 0;
     text-align: center;
     text-transform: uppercase;
-    width: 90%;
+    width: 100%;
 }
 
 #restaurant-container, #reviews-container {
@@ -291,7 +310,7 @@ nav h1 a {
 
 #reviews-container h2 {
     color: #f58500;
-    font-size: 24pt;
+    font-size: 2.4em;
     font-weight: 300;
     letter-spacing: -1px;
     padding-bottom: 1pt;
@@ -311,20 +330,33 @@ nav h1 a {
     display: block;
     list-style-type: none;
     margin: 0 0 30px;
-    overflow: hidden;
-    padding: 0 20px 20px;
     position: relative;
     width: 85%;
-    border-top-left-radius: 25px;
-    border-bottom-right-radius: 25px;
 }
 
 #reviews-list li p {
     margin: 0 0 10px;
 }
 
+#restaurant-hours {
+    border: 2px solid #ccc;
+}
+
 #restaurant-hours td {
-    color: #666;
+    color: #70b57c;
+    background-color: #fff;
+    font-size: 10pt;
+    font-weight: 300;
+    padding: 5px 5px;
+}
+
+#restaurant-hours td:nth-of-type(1) {
+    font-weight: bold;
+}
+
+#restaurant-hours td:nth-of-type(2) {
+    font-style: italic;
+    max-width: 125px;
 }
 
 #reviews-list li p:first-of-type {
@@ -393,5 +425,66 @@ nav h1 a {
 
     #reviews-container h2 {
         font-size: 20pt;
+    }
+}
+
+@media screen and (min-width: 640px) and (max-width: 929px){
+    #restaurants-list li {
+        max-width: 42%;
+    }
+    #restaurants-list li h1 {
+        height: 35px;
+    }
+}
+
+@media screen and (min-width: 930px) {
+    #restaurants-list li {
+        max-width: 30%;
+    }
+    #restaurants-list p {
+        width: 66%;
+    }
+    #restaurants-list li h1 {
+        height: 41px;
+    }
+
+    .inside header {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
+    }
+    .inside #map-container {
+        background: blue none repeat scroll 0 0;
+        height: 100%;
+        position: fixed;
+        right: 0;
+        top: 80px;
+        width: 50%;
+    }
+    #breadcrumb {
+        width: calc(50% - 80px);
+    }
+    #restaurant-img {
+        width: 90%;
+    }
+    #restaurant-container {
+        width: 45%;
+        padding: 140px 40px 30px;
+    }
+    #reviews-container {
+        width: 45%;
+        padding: 40px 30px;
+    }
+    #restaurant-cuisine {
+        width: 90%;
+    }
+    #reviews-list li {
+        width: 85%;
+    }
+    .inside #footer {
+        bottom: 0;
+        position: absolute;
+        width: 45%;
     }
 }
